# lhmp-reboot

./: .gitignore  .gitmodules  CMakeLists.txt  README  todo.txt
client/: CMakeLists.txt
client/include/: CCore.h  CEntity.h  CFileTransfer.h  CGraphics.h  CInterpolation.h  CLocalPlayer.h  CNetwork.h  CPed.h  CPickupPool.h  CPlayerSync.h  CVehiclePool.h
client/src/: CChat.cpp  CCrashHandler.cpp  CEngineStack.cpp  CGame.cpp
cmake/modules/: FindRakNet.cmake  Findezraknet.cmake
lhmp/client/: CMakeLists.txt
lhmp/client/include/: AntiCheat.h  CChat.h  CColoredText.h  CCore.h  CCrashHandler.h  CDirect3D8Proxy.h  CDirect3DDevice8Proxy.h  CFileSystem.h  CFileTransfer.h  CFont.h  CGame.h  CGameSync.h  CGraphics.h  CIngameMenu.h  CLog.h  CNetwork.h  CPed.h  CPickup.h  CSQFonts.h  CSQImages.h  CSquirrel.h  CVehicle.h  directx8hook.h
lhmp/client/src/: AntiCheat.cpp  CChat.cpp  CColoredText.cpp  CCore.cpp  CGame.cpp  CGameSync.cpp  CGraphics - Copy.cpp  CGraphics.cpp  CHooks.cpp  CLocalPlayer.cpp  CLog.cpp  CNetwork.cpp  CPickupPool.cpp
lhmp/server/: CMakeLists.txt
lhmp/server/include/: CCore.h  CNetworkManager.h
lhmp/server/src/: CConsole.cpp  CMasterServer.cpp  CNetworkManager.cpp  CVehicle.cpp
lhmp/shared/include/: structures.h  tools.h
old/: .gitignore  LHMP.sln  README.md
old/Browser/: compile.bat
old/Browser/LHMP_Browser/: LHMP_Browser.pro.user.7884ea8  clhmpquery.cpp  launcher.cpp  launcher.cpp.old  launcher.h  launcher.rc  settings.cpp  settings.ui
old/Browser/build-LHMP_Browser-Desktop-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_launcher.h  ui_settings.h
old/Client/: CChat.cpp  CCore.cpp  CCore.h  CCrashHandler.cpp  CEngineStack.cpp  CGame.cpp  CGame.h  CGameSync.cpp  CGameSync.h  CGraphics.cpp  CHooks.cpp  CIngameMenu.cpp  CInterpolation.cpp  CKeyboard.cpp  CLocalPlayer.cpp  CNametags.cpp  CNetwork.cpp  CNetwork.h  CPed.cpp  CPed.h  CSquirrel.cpp  CVehicle.cpp  CVehicle.h  Client.vcxproj  main.cpp
old/Installer/: installer.iss
old/Loader/: Main.cpp
old/MasterList/: MasterList.vcxproj
old/Server/: CConfig.cpp  CConsole.cpp  CCore.cpp  CCore.h  CEntity.cpp  CEntity.h  CFileTransfer.cpp  CFileTransfer.h  CGameMode.cpp  CGameMode.h  CMasterServer.cpp  CNetworkManager.cpp  CPlayer.cpp  CPlayer.h  CScripts.cpp  CScripts.h  CVehicle.cpp  CVehicle.h  Server.cbp  Tesla.cbp  sq_funcdef.cpp  sq_funcdef.h  sq_functions.cpp
old/Server/logs/: 2018-04-24.txt
old/browser-new/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  ServerBrowser.csproj
old/browser-new/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
old/sdks/RakNet/: RakNet.vcxproj  RakNet.vcxproj.filters
old/sdks/SQUIRREL3/sqstdlib/: sqstdlib.vcxproj
old/sdks/SQUIRREL3/squirrel/: squirrel.vcxproj
old/shared/: structures.h  version.h
server/: CMakeLists.txt
shared/: CMakeLists.txt
